--- a/Single-Page CV/index.html
+++ b/Single-Page CV/index.html
@@ -3,9 +3,147 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sonia Resume</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #f4f4f4;
+            padding: 30px;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            margin-bottom: 15px;
+        }
+
+        h2 {
+            margin-top: 25px;
+            margin-bottom: 10px;
+        }
+
+        .contact-info {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+
+        .contact-item {
+            margin-right: 20px;
+        }
+
+        .contact-item i {
+            margin-right: 5px;
+        }
+
+        .section {
+            margin-bottom: 30px;
+        }
+
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 5px;
+        }
+    </style>
 </head>
 <body>
-    
+
+    <div class="container">
+        <h1><center>Sonia Sharma</center></h1>
+        <p><center>Full Stack Web Developer</center></p>
+
+        <div class="contact-info">
+            <div class="contact-item">
+                <i class="fas fa-phone"></i> 
+                <span><b>Phone Number:</b> +91 9465732859</span>
+            </div>
+            <div class="contact-item">
+                <i class="fas fa-envelope"></i> 
+                <span><b>Email:</b> soniashar2021@gmail.com</span>
+            </div>
+            <div class="contact-item">
+                <i class="fas fa-globe"></i> 
+                <span><b>Location:</b> Ludhiana Punjab</span>
+            </div>
+            <div class="contact-item">
+                <i class="fab fa-linkedin"></i> 
+                <span><b>LinkedIn:</b> sonia-08-sharma</span>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>Summary</h2>
+            <p>Highly motivated and results-oriented Full Stack Developer with a strong foundation in [mention 1-2 key technologies e.g., JavaScript, Python, React, Node.js] seeking an entry-level position in a dynamic and innovative environment. Eager to contribute to challenging projects, learn new technologies, and grow professionally within a collaborative team. Currently completing a Master's degree in [Your Major] with a focus on [mention specific area of focus e.g., web development, software engineering].</p>
+        </div>
+
+        <div class="section">
+            <h2>Experience</h2>
+            <ul>
+                <li>
+                    **Job Title** | Company Name | City, State | Dates of Employment
+                    <ul>
+                        <li>Responsibility 1</li>
+                        <li>Responsibility 2</li>
+                        <li>Responsibility 3</li>
+                    </ul>
+                </li>
+                <li>
+                    **Job Title** | Company Name | City, State | Dates of Employment
+                    <ul>
+                        <li>Responsibility 1</li>
+                        <li>Responsibility 2</li>
+                        <li>Responsibility 3</li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Education</h2>
+            <ul>
+                <li>**Degree** | Major | University Name | City, State | Graduation Date</li>
+                <li>**Degree** | Major | University Name | City, State | Graduation Date</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li>Skill 1</li>
+                <li>Skill 2</li>
+                <li>Skill 3</li>
+                <li>Skill 4</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Projects (Optional)</h2>
+            <ul>
+                <li>Project Name | Description</li>
+                <li>Project Name | Description</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>Awards & Recognition (Optional)</h2>
+            <ul>
+                <li>Award Name | Year</li>
+                <li>Award Name | Year</li>
+            </ul>
+        </div>
+
+    </div>
+
 </body>
 </html>
