--- a/Single-Page CV/index.html
+++ b/Single-Page CV/index.html
@@ -18,6 +18,7 @@
             padding: 30px;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    
         }
 
         h1 {
@@ -60,13 +61,13 @@
 <body>
 
     <div class="container">
-        <h1><center>Sonia Sharma</center></h1>
-        <p><center>Full Stack Web Developer</center></p>
+        <h1>Sonia Sharma</h1>
+        <p>Full Stack Web Developer</p>
 
         <div class="contact-info">
             <div class="contact-item">
                 <i class="fas fa-phone"></i> 
-                <span><b>Phone Number:</b> +91 9465732859</span>
+                <span><b>Phone Number:</b> +91 9464526***</span>
             </div>
             <div class="contact-item">
                 <i class="fas fa-envelope"></i> 
@@ -74,7 +75,7 @@
             </div>
             <div class="contact-item">
                 <i class="fas fa-globe"></i> 
-                <span><b>Location:</b> Ludhiana Punjab</span>
+                <span><b>Location:</b></b> Ludhiana Punjab</span>
             </div>
             <div class="contact-item">
                 <i class="fab fa-linkedin"></i> 
@@ -88,23 +89,36 @@
         </div>
 
         <div class="section">
-            <h2>Experience</h2>
+            <h2>Internship</h2>
             <ul>
                 <li>
-                    **Job Title** | Company Name | City, State | Dates of Employment
-                    <ul>
-                        <li>Responsibility 1</li>
-                        <li>Responsibility 2</li>
-                        <li>Responsibility 3</li>
-                    </ul>
+                    **Web Development** | CodePhine | Lucknow | March 2023- April 2023
+                    
                 </li>
                 <li>
-                    **Job Title** | Company Name | City, State | Dates of Employment
-                    <ul>
-                        <li>Responsibility 1</li>
-                        <li>Responsibility 2</li>
-                        <li>Responsibility 3</li>
-                    </ul>
+                    **Graphic Designer** | Prerogative Group of Institutes | Ldh.,PB. | June 2021-July 2021
+                </li>
+                <li>
+                    **UI Technology** | TechPile Technology.pvt. | Ldh.,PB. | May 2021-June 2021
+                </li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Trainings</h2>
+            <ul>
+                <li>
+                    **PYTHON** | Infosys Springboard | June 2024-July2024  
+                </li>
+                <li>
+                    **REACTJS** | Infosys Springboard | July 2024-July 2024
+                </li>
+                <li>
+                    **ANGULAR** | Infosys Springboard | July2024-July2024 
+                </li>
+                <li>
+                    **Fundamentals of Programming
+                    using C language** | Prerogative
+                    Group of Institutes.| May2021-May2021 
                 </li>
             </ul>
         </div>
@@ -112,35 +126,29 @@
         <div class="section">
             <h2>Education</h2>
             <ul>
-                <li>**Degree** | Major | University Name | City, State | Graduation Date</li>
-                <li>**Degree** | Major | University Name | City, State | Graduation Date</li>
+                <li>**Masters in Computer Applications** | GNDEC | Ldh., Pb. | Pursuing</li>
+                <li>**Bachelors in Computer Applications** | Govt.College for Girls | Ldh., Pb. | June 2023</li>
+                <li>**XII** | S D Girls Sen Sec School | Ldh., Pb. | March 2020</li>
+                <li>**X** | S D Girls Sen Sec School | Ldh., Pb. | March 2018</li>
             </ul>
         </div>
 
         <div class="section">
             <h2>Skills</h2>
             <ul>
-                <li>Skill 1</li>
-                <li>Skill 2</li>
-                <li>Skill 3</li>
-                <li>Skill 4</li>
+                <li>Leadership </li>
+                <li>Teamwork</li>
+                <li>Communication<br>
+                English, Hindi,Punjabi</li>
+                <li>Strategic Planning</li>
             </ul>
         </div>
 
         <div class="section">
-            <h2>Projects (Optional)</h2>
+            <h2>Projects</h2>
             <ul>
-                <li>Project Name | Description</li>
-                <li>Project Name | Description</li>
-            </ul>
-        </div>
-
-        <div class="section">
-            <h2>Awards & Recognition (Optional)</h2>
-            <ul>
-                <li>Award Name | Year</li>
-                <li>Award Name | Year</li>
-            </ul>
+                <li>People Helping People 2.o <br> HTML,CSS, JScript, PHP based project to help the organization.</li>
+              </ul>
         </div>
 
     </div>
