--- a/HM/A2/index.html
+++ b/HM/A2/index.html
@@ -19,13 +19,18 @@
             font-weight: bold;
             margin-right: 5px;
         }
+
+        .speaker {
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
-    
-    <h1>Macbeth</h1>
-    <p><b> Presented By: Mansfield Classical Theatre </b> </p>
+    <img src="img1.jpg" alt="" width="100%">
+    <!-- <h1>Macbeth</h1> -->
+    <!-- <p><b> Presented By: Mansfield Classical Theatre </b> </p> -->
 
+    <h2>Presented By: Mansfield Classical Theatre</h2>
     <h2>ACT I</h2>
     <h3>SCENE 1</h3>
 
@@ -36,33 +41,46 @@
     <p>A desert place.</p>
     <p> Thunder and lightning. Enter three witches.</p>
 
-    <p><span class="speaker">First Witch</span><br>
-         When shall we three meet again <br> In thunder, lightning, or in rain?</p>
+   <dt> <p><span class="speaker"> First Witch</span><br></dt>
+       <dd> When shall we three meet again <br> In thunder, lightning, or in rain?</p></dd> 
 
-    <p><span class="speaker">Second Witch</span> When the hurlyburly's done, <br> when the battle's lost and won.</p>
+    <dt><p><span class="speaker">Second Witch</span></dt>
+       <dd> When the hurlyburly's done, <br> when the battle's lost and won.</p></dd>
 
-    <p><span class="speaker">Third Witch</span> That will be ere the set of sun.</p>
+    <dt><p><span class="speaker">Third Witch</span> </dt>
+        <dd>That will be ere the set of sun.</p></dd>
 
-    <p><span class="speaker">First Witch</span> Where the place?</p>
+    <dt><p><span class="speaker">First Witch</span> </dt>
+         <dd>Where the place?</p></dd>
 
-    <p><span class="speaker">Second Witch</span> Upon the health?</p>
+   <dt> <p><span class="speaker">Second Witch</span> </dt>
+        <dd>Upon the health?</p></dd>
 
-    <p><span class="speaker">Third  Witch</span> There to meet with Macbeth.</p>
+   <dt> <p><span class="speaker">Third  Witch</span> </dt>
+         <dd>There to meet with Macbeth.</p></dd>
 
-    <p><span class="speaker">First  Witch</span> I come, Graymalkin!</p>
+    <dt><p><span class="speaker">First  Witch</span> </dt>
+        <dd> I come, Graymalkin!</p></dd>
 
-    <p><span class="speaker">Second  Witch</span> Paddock Calls.</p>
+    <dt><p><span class="speaker">Second  Witch</span></dt>
+         <dd> Paddock Calls.</p></dd>
 
-    <p><span class="speaker">Third  Witch</span> Anon.</p>
+  <dt>  <p><span class="speaker">Third  Witch</span></dt>
+        <dd> Anon.</p></dd>
 
-    <p><span class="speaker">All</span>
-    Fair is foul, and foul is fair. <br>
-Hover through the fog and filthy air.</p>
+   <dt> <p><span class="speaker">All</span></dt>
+   <dd> Fair is foul, and foul is fair. <br>
+    Hover through the fog and filthy air.</p></dd>
 
 <p class="stage-directions">Exeunt</p>
+<hr>
+<p style="background-color: lightblue;"> Go to scene 2</p>
+<hr>
 
-<p> Go to scene 2</p>
-
+<hr>
+ 
+<h4 style="text-align: center;" >TEXT PROVIDED BY ONLINE SHAKESPEARE</h4>
+<hr>
 
 </body>
 </html>
